[package]
name = "tabbycat-rs"
version = "0.1.0"
authors = ["Kajetan Puchalski <kajetan.puchalski@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }